# ngen_state_system

./: .travis.yml  CMakeLists.txt  readme.md
include/: game_state.h  state_tree.h
source/: game_state.cpp  game_system_factory.cpp  state_tree.cpp
test/: CMakeLists.txt  test_game_state.cpp  test_game_system.cpp  test_game_system.h  test_game_system_factory.cpp  test_state_tree.cpp.cpp
